# F1Predict

./: README.md  pyproject.toml
configs/: base.yaml  modern_era.yaml
data/: master.manifest.json  master.parquet
data/cache/: season_2014.parquet  season_2015.parquet  season_2016.parquet  season_2017.parquet  season_2018.parquet  season_2019.parquet  season_2020.parquet  season_2021.parquet  season_2022.parquet  season_2023.parquet  season_2024.parquet  season_2025.parquet  season_2026.parquet  weather.parquet
docs/: DATA_DICTIONARY.md  DESIGN.md  FEATURE_GLOSSARY.md
experiments/: experiments.jsonl
f1predict.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
models_store/: ensemble_default.card.json  ensemble_default_qualifying.card.json  ensemble_default_sprint.card.json  production.txt  production_qualifying.txt  production_sprint.txt
reports/: race_report.html
src/: __init__.py
src/cli/: __init__.py  main.py  render.py  shell.py
src/config/: __init__.py  config.py
src/dashboard/: app.py  data.py  theme.py  widgets.py
src/data_pipeline/: __init__.py  build.py  jolpica.py  racref.py  schema.py  sprint_calendar.py  synthetic.py  weather.py
src/evaluation/: __init__.py  backtest.py  metrics.py
src/features/: __init__.py  elo.py  factory.py  regulations.py  tracks.py
src/models/: __init__.py  experiment.py  future.py  predictor.py  registry.py  train.py
src/reporting/: __init__.py  docs.py  report.py
src/simulation/: __init__.py  engine.py
tests/: conftest.py  test_cli.py  test_model_store.py  test_models_sim.py  test_pipeline.py  test_points.py  test_racref.py  test_regulations_sim.py  test_sessions.py  test_shell.py  test_weather.py
(+15 files in other folders)
